[gd_scene load_steps=3 format=3 uid="uid://dprabtfd8kumd"]

[ext_resource type="Script" path="res://scripts/MainScene.gd" id="1_gntte"]
[ext_resource type="PackedScene" uid="uid://yeugcqmy5fki" path="res://scenes/MainMenu.tscn" id="2_wpr7x"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_gntte")

[node name="MainMenu" parent="." instance=ExtResource("2_wpr7x")]

[connection signal="credits_button_pressed" from="MainMenu" to="." method="_on_main_menu_credits_button_pressed"]
[connection signal="exit_button_pressed" from="MainMenu" to="." method="_on_main_menu_exit_button_pressed"]
[connection signal="game_start_button_pressed" from="MainMenu" to="." method="_on_main_menu_game_start_button_pressed"]
